--- a/week-1/02-homework/01-homework.ipynb
+++ b/week-1/02-homework/01-homework.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/oneofff/Ai-Tailored-Resume/blob/master/week-1/02-homework/01-homework.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "4eb1f2da-1be9-465f-a23c-ee807b9fce39",
       "metadata": {
         "id": "4eb1f2da-1be9-465f-a23c-ee807b9fce39"
@@ -166,38 +156,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 1,
-      "id": "17af0c57-6e49-4ee2-90a3-9fd0899398a3",
-      "metadata": {
-        "id": "17af0c57-6e49-4ee2-90a3-9fd0899398a3",
-        "outputId": "af2ac2ce-0ca5-4272-c4c7-8d06e60c7365",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Sorted list: [0, 1, 3, 4, 7, 8, 9, 11]\n"
-          ]
-        }
-      ],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "a69ac3eb-d7ec-4854-9aea-db458b2d510b",
-      "metadata": {
-        "id": "a69ac3eb-d7ec-4854-9aea-db458b2d510b"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "id": "0f5cb9cc-0bde-4fa5-b3a2-84cdbbd17d4b",
       "metadata": {
@@ -218,6 +176,85 @@
         "    1. keep doing the above two steps, you'll eventually end up with 1\n",
         "    1. try it with the numbers 5, 24, and 33"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1. 3231\n",
+        "--------------------------------\n",
+        "2. 1233 and 3321\n",
+        "3. 3321 - 1233 = 2088\n",
+        "--------------------------------\n",
+        "4. 0288 and 8820\n",
+        "5. 8820 - 288 = 8532\n",
+        "--------------------------------\n",
+        "6. 8532 and 2358\n",
+        "7. 8532 - 2358 = 6174\n",
+        "Done!"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "2Fek4rQdgv93"
+      },
+      "id": "2Fek4rQdgv93",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5\n",
+        "5 * 3 + 1\n",
+        "5 * 3 + 1 = 16\n",
+        "16 / 2\n",
+        "16 / 2 = 8\n",
+        "8 / 2\n",
+        "8 / 2 = 4\n",
+        "4 / 2\n",
+        "4 / 2 = 2\n",
+        "2 / 2\n",
+        "2 / 2 = 1\n",
+        "Done!"
+      ],
+      "metadata": {
+        "id": "yid7FAWWmAsu"
+      },
+      "id": "yid7FAWWmAsu",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "24\n",
+        "24 / 2\n",
+        "24 / 2 = 12\n",
+        "12 / 2\n",
+        "12 / 2 = 6\n",
+        "6 / 2\n",
+        "6 / 2 = 3\n",
+        "3 * 3 + 1\n",
+        "3 * 3 + 1 = 10\n",
+        "10 / 2\n",
+        "10 / 2 = 5\n",
+        "5 * 3 + 1\n",
+        "5 * 3 + 1 = 16\n",
+        "16 / 2\n",
+        "16 / 2 = 8\n",
+        "8 / 2\n",
+        "8 / 2 = 4\n",
+        "4 / 2\n",
+        "4 / 2 = 2\n",
+        "2 / 2\n",
+        "2 / 2 = 1\n",
+        "Done!"
+      ],
+      "metadata": {
+        "id": "ysBrH9MmnExS"
+      },
+      "id": "ysBrH9MmnExS",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -305,8 +342,7 @@
       "version": "3.13.1"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
